# ortzi-CLOUD2025

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
conf/: lithops_config_template.yaml
data/: cities_big.csv  lorem_ipsum.txt  replicate.sh  tpcds_gen.sh
examples/: tpcds_schemas.py
examples/backends/: config.py  terasort.py  test-set-cf.sh  tpc-ds-sort.py  tpc-ds.py
examples/execution_modes/: terasort.py  test-set.sh  tpc-ds-sort.py
examples/options/: config.py  select_memory.py
ortzi/: __init__.py  cli.py  client.py  config.py  driver.py  event.py  executor.py  partition_manager.py  task.py  task_scheduler.py  utils.py  worker.py
ortzi/api/: dataframe.py  show.py
ortzi/backends/: aws.py  backend.py  executor_config.py  k8s.py  minio.py
ortzi/cython/: read_terasort_data.pyx
ortzi/io_utils/: external_utils.py  info.py  io_clients.py  io_handler.py  queues.py  serialize.py  shared_memory_patches.py
ortzi/logging/: execution_log.py  plot_utils.py  ui_log.py  utils.py
ortzi/logical/: descriptors.py  logical.py
ortzi/manipulations/: cast.py  condition.py  flag.py  group_agg.py  manipulation.py  merge.py  partition.py  reduce.py  sample.py  simple.py  sort.py  transform.py
ortzi/physical/: dag.py  physical.py  utils.py
ortzi/proto/: proto_compilation.sh  services.proto  services_pb2.py  services_pb2.pyi  services_pb2_grpc.py  task_info.py
ortzi/struct/: dataframe.py
runtime/: Dockerfile  Dockerfile_k8s  build_image_ec2.sh  build_runtime_ec2.sh  ec2.Dockerfile  purgue_local_docker.sh  restart_runtime.sh  set_lithops_config.py
(+1 files in other folders)
